crates/rs_html_parser/tests/snapshots/html5lib_test3_test__tests__lt_excl_mark_doctype_a_u0000.snap
---
source: crates/rs_html_parser/tests/html5lib_test3_test.rs
expression: "parser_test(r####\"<!DOCTYPE a\u0000\"####)"
---
[
    Token {
        data: "DOCTYPE a\0",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
]
