crates/rs_html_parser/tests/snapshots/html5lib_test3_test__tests__lt_excl_mark_doctype_a_u0008.snap
---
source: crates/rs_html_parser/tests/html5lib_test3_test.rs
expression: "parser_test(r####\"<!DOCTYPE a\b\"####)"
---
[
    Token {
        data: "DOCTYPE a\u{8}",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
]
